[package]
authors = ["Vincent Esche <regexident@gmail.com>"]
categories = ["algorithms"]
description = "An implementation of an efficient O(n) median filter."
documentation = "https://docs.rs/median"
homepage = "https://github.com/regexident/median"
keywords = [
    "median",
    "filter",
    "dsp",
    "signal-processing",
]
license = "MPL-2.0"
name = "median"
readme = "README.md"
repository = "https://github.com/regexident/median"
version = "0.2.0"

[dependencies]
arrayvec = "0.4.7"

[dev-dependencies]
arraydeque = "0.4.2"
noisy_float = "0.1.4"
rand = "0.4.2"

[features]
default = ["std"]
std = []
